k8s-lab/0-bootstrap/cert-manager/manifests/1-manifest/admissionregistration.k8s.io_v1-validatingwebhookconfiguration-default-trust-manager.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: trust-manager-system/trust-manager
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"cert-manager.io/inject-ca-from":"trust-manager-system/trust-manager"},"labels":{"app":"trust-manager","app.kubernetes.io/instance":"trust-manager","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"trust-manager","app.kubernetes.io/version":"v0.4.0","helm.sh/chart":"trust-manager-v0.4.0"},"name":"trust-manager"},"webhooks":[{"admissionReviewVersions":["v1"],"cl [...]
  labels:
    app: trust-manager
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: trust-manager
    app.kubernetes.io/version: v0.4.0
    helm.sh/chart: trust-manager-v0.4.0
  name: trust-manager
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: trust-manager
      namespace: trust-manager-system
      path: /validate
  failurePolicy: Fail
  name: trust.cert-manager.io
  rules:
  - apiGroups:
    - trust.cert-manager.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
  sideEffects: None
  timeoutSeconds: 5
